public folder + logo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
         <title>Главная страница</title>
     </head>
     <body>
+        <header><a href="/"><img src="/img/logo.png" alt="Главная"></a></header>
         <form action="/posts" method="POST">
             <textarea name="content" required></textarea>
             <button type="submit">Создать пост</button>
