--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,8 +6,9 @@
         <title>Профиль</title>
     </head>
     <body>
+        <header><a href="/"><img src="/img/logo.png" alt="Главная"></a></header>
         <h1>Профиль пользователя</h1>
-        <p>Имя пользователя: <%= user.username %></p>
+        <p>Имя пользователя: <%= username %></p>
         <a href="/logout">Выйти</a>
     </body>
 </html>
