--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,10 +6,11 @@
         <title>Авторизация</title>
     </head>
     <body>
+        <header><a href="/"><img src="/img/logo.png" alt="Главная"></a></header>
         <h1>Авторизация</h1>
         <form action="/login" method="post">
-            <input type="text" name="username" placeholder="Имя пользователя" required>
-            <input type="password" name="password" placeholder="Пароль" required>
+            <input type="text" name="username" placeholder="Имя пользователя" required><br><br>
+            <input type="password" name="password" placeholder="Пароль" required><br><br>
             <button type="submit">Войти</button>
         </form>
     </body>
