--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,10 +6,11 @@
         <title>Регистрация</title>
     </head>
     <body>
+        <header><a href="/"><img src="/img/logo.png" alt="Главная"></a></header>
         <h1>Регистрация</h1>
         <form action="/register" method="POST">
-            <input type="text" name="username" placeholder="Имя пользователя" required>
-            <input type="password" name="password" placeholder="Придумайте пароль" required>
+            <input type="text" name="username" placeholder="Имя пользователя" required><br><br>
+            <input type="password" name="password" placeholder="Придумайте пароль" required><br><br>
             <button type="submit">Зарегистрироваться</button>
         </form>
     </body>
