--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,5 +13,6 @@
             <input type="password" name="password" placeholder="Пароль" required><br><br>
             <button type="submit">Войти</button>
         </form>
+        <p>Нет аккаунта?<a href="/register">Зарегистрироваться</a></p>
     </body>
 </html>
