--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Авторизация</title>
+        <title>Вход</title>
     </head>
     <body>
-        <header><a href="/"><img src="/img/logo.png" alt="Главная"></a></header>
-        <h1>Авторизация</h1>
-        <form action="/login" method="post">
-            <input type="text" name="username" placeholder="Имя пользователя" required><br><br>
-            <input type="password" name="password" placeholder="Пароль" required><br><br>
-            <button type="submit">Войти</button>
+        <header>
+            <a href="/">
+                <img src="/img/logo.png" alt="Logo" style="height: 50px;">
+            </a>
+        </header>
+        <h1>Вход</h1>
+        <form action="/auth/login" method="POST">
+            <label for="username">Логин:</label>
+            <input type="text" id="username" name="username" required>
+            <br><br>
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" required>
+            <br><br>
+            <button type="submit">Войти</button><br>
+            <p>Нет аккаунта?<a href="/register">Зарегистрироваться</a></p>
         </form>
-        <p>Нет аккаунта?<a href="/register">Зарегистрироваться</a></p>
     </body>
 </html>
