--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Регистрация</title>
     </head>
     <body>
-        <header><a href="/"><img src="/img/logo.png" alt="Главная"></a></header>
+        <header>
+            <a href="/">
+                <img src="/img/logo.png" alt="Logo" style="height: 50px;">
+            </a>
+        </header>
         <h1>Регистрация</h1>
-        <form action="/register" method="POST">
-            <input type="text" name="username" placeholder="Имя пользователя" required><br><br>
-            <input type="password" name="password" placeholder="Придумайте пароль" required><br><br>
-            <label for="role">Выберите роль:</label>
-            <select name="role" id="role">
+        <form action="/auth/register" method="POST">
+            <label for="username">Логин:</label>
+            <input type="text" id="username" name="username" required>
+            <br><br>
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" required>
+            <br><br>
+            <label for="role">Роль:</label>
+            <select id="role" name="role" required>
                 <option value="user">Пользователь</option>
                 <option value="admin">Администратор</option>
-            </select><br><br>
+            </select>
+            <br><br>
             <button type="submit">Зарегистрироваться</button>
-        </form>
+            <br>
+            <p>Уже есть аккаунт?<a href="/login">Авторизоваться</a></p>
+        </form>   
     </body>
 </html>
