--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Вход</title>
-    </head>
-    <body>
-        <header>
-            <a href="/">
-                <img src="/img/logo.png" alt="Logo" style="height: 50px;">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Вход</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body data-bs-theme="dark">
+    <header class="bg-primary text-white p-3 mb-4">
+        <div class="container">
+            <a href="/" class="text-white text-decoration-none">
+                <img src="/img/logo4.png" alt="Logo">
             </a>
-        </header>
-        <h1>Вход</h1>
-        <form action="/auth/login" method="POST">
-            <label for="username">Логин:</label>
-            <input type="text" id="username" name="username" required>
-            <br><br>
-            <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" required>
-            <br><br>
-            <button type="submit">Войти</button><br>
-            <p>Нет аккаунта?<a href="/register">Зарегистрироваться</a></p>
+        </div>
+    </header>
+
+    <main class="container">
+        <form action="/auth/login" method="POST" class="w-50 mx-auto">
+        <h1 class="mb-4">Вход</h1>
+        <% if (typeof successMessage !== 'undefined' && successMessage) { %>
+            <div class="alert alert-success" data-bs-theme="light" role="alert">
+                <%= successMessage %>
+            </div>
+        <% } %>
+        <% if (typeof errorMessage !== 'undefined' && errorMessage) { %>
+            <div class="alert alert-danger" role="alert">
+                <%= errorMessage %>
+            </div>
+        <% } %>
+            <div class="mb-3">
+                <label for="username" class="form-label" >Логин:</label>
+                <input type="text" id="username" name="username" value="<% if (typeof username != 'undefined' && username ) { %><%= username %><% } else { %><%= '' %><% } %>" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Пароль:</label>
+                <input type="password" id="password" name="password" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Войти</button>
+            <p class="mt-3 text-center">Нет аккаунта? <a href="/register">Зарегистрироваться</a></p>
         </form>
-    </body>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
