--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Регистрация</title>
-    </head>
-    <body>
-        <header>
-            <a href="/">
-                <img src="/img/logo.png" alt="Logo" style="height: 50px;">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Регистрация</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body data-bs-theme="dark">
+    <header class="bg-primary text-white p-3 mb-4">
+        <div class="container">
+            <a href="/" class="text-white text-decoration-none">
+                <img src="/img/logo4.png" alt="Logo">
             </a>
-        </header>
-        <h1>Регистрация</h1>
-        <form action="/auth/register" method="POST">
-            <label for="username">Логин:</label>
-            <input type="text" id="username" name="username" required>
-            <br><br>
-            <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" required>
-            <br><br>
-            <label for="role">Роль:</label>
-            <select id="role" name="role" required>
-                <option value="user">Пользователь</option>
-                <option value="admin">Администратор</option>
-            </select>
-            <br><br>
-            <button type="submit">Зарегистрироваться</button>
-            <br>
-            <p>Уже есть аккаунт?<a href="/login">Авторизоваться</a></p>
-        </form>   
-    </body>
+        </div>
+    </header>
+
+    <main class="container">
+
+        <form action="/auth/register" method="POST" class="w-50 mx-auto">
+            <h1 class="mb-4">Регистрация</h1>
+            <% if (typeof errorMessage !== 'undefined' && errorMessage) { %>
+                <div class="alert alert-danger" data-bs-theme="light" role="alert">
+                    <%= errorMessage %>
+                </div>
+            <% } %>
+            <div class="mb-3">
+                <label for="username" class="form-label">Логин:</label>
+                <input type="text" id="username" name="username" value="<% if (typeof username != 'undefined' && username ) { %><%= username %><% } else { %><%= '' %><% } %>" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Пароль:</label>
+                <input type="password" id="password" name="password" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Повторите пароль:</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required>
+            </div>
+            <div class="mb-3 role-select">
+                <label for="role" class="form-label">Роль:</label>
+                <select id="role" name="role" class="form-select" required>
+                    <option value="user">Пользователь</option>
+                    <option value="admin">Администратор</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+            <p class="mt-3 text-center">Уже есть аккаунт? <a href="/login">Авторизоваться</a></p>
+        </form>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
