--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,10 +18,27 @@
     </header>
 
     <main class="container">
+        <% if (typeof successMessage !== 'undefined' && successMessage) { %>
+            <div class="alert alert-success" data-bs-theme="light" role="alert">
+                <%= successMessage %>
+            </div>
+        <% } %>
         <h1 class="mb-4">Профиль</h1>
         <div class="mb-4">
             <p><strong>Логин:</strong> <%= user.username %></p>
             <p><strong>Роль:</strong> <%= user.role %></p>
+            <h2>Аватарка</h2>
+            <div class="mb-3">
+                <img src="<%= user.avatarUrl && user.avatarUrl.trim() ? user.avatarUrl : '/img/default-avatar.png' %>" alt="Аватар" class="img-thumbnail mb-3" style="max-width: 150px; height: 150px;">
+            </div>
+            <form action="/user/upload" method="post" enctype="multipart/form-data" id="avatarForm" class="form">
+                <div class="mb-3">
+                    <label for="avatar" class="form-label">Загрузить новую аватарку</label><br>
+                    <input type="file" class="form-control" id="avatar" name="avatar" accept=".jpg, .jpeg, .png, .gif" required style="max-width: 300px;">
+                    <small class="text-muted">(размеры изображения не должны превышать 300х300 пикселей и весить не более 5 МБ)</small>
+                </div>
+                <button type="submit" class="btn btn-primary">Загрузить</button>
+            </form>
         </div>
 
         <% if (user.role === 'admin') { %>
@@ -45,6 +62,7 @@
         <% } %>
     </main>
 
+    <script src="/js/profileScript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
