--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,7 +65,7 @@
                             <img src="<%= topic.user.avatarUrl && topic.user.avatarUrl.trim() ? topic.user.avatarUrl : '/img/default-avatar.png' %>" 
                             alt="Аватар" class="img-thumbnail" style="max-width: 50px; height: 50px;">
                         </span>
-                        <% if (user && user.role === 'admin') { %>
+                        <% if (user && user.role === 'admin' || user.username === topic.user.username) { %>
                             <form action="/topic/delete/<%= topic.id %>" method="POST" style="display:inline;">
                                 <button type="submit" class="btn btn-danger btn-sm">Удалить пост</button>
                             </form>
